fixed controllers and migrations
